tests/test_files/valid_files_sintatic/simple_code.c
int main() {
    int x = 5;
    float y = 3.14;
    if (x < 10) {
        return x + y;
    }
}