tests/test_files/invalid_files_sintatic/missing_expression.c
int main() {
    int x = ;   // ❌ não há valor depois de “=”
    return 0;
}
